// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`build action > build 0 1`] = `
"
# cspell-tools: keep-case no-split

black
blue
cyan
green
magenta
orange
pink
purple
red
white
yellow
"
`;

exports[`build action > build 1 1`] = `
"
# cspell-tools: keep-case no-split

black
blue
cyan
green
magenta
orange
pink
purple
red
white
yellow
"
`;

exports[`build action > build 2 1`] = `
"#!/usr/bin/env cspell-trie reader
TrieXv3
base=32
# Built by cspell-tools.
# Data:
__DATA__
L
o
ndon$4s Angeles$9<2
M
e
xico City$9<2
N
e
w Amsterdam$9Delhi$5York$8
P
a
ri#d;<4
S
a
n Francisco$9<4
"
`;

exports[`build action > build 3 1`] = `
"
# cspell-tools: keep-case no-split

London
Los Angeles
Mexico City
New Amsterdam
New Delhi
New York
Paris
San Francisco
black
blue
cyan
green
magenta
orange
pink
purple
red
white
yellow
"
`;

exports[`build action > build 4 1`] = `
"
# cspell-tools: keep-case no-split

Amsterdam
Angeles
City
Delhi
Francisco
London
Los
Mexico
New
Paris
San
York
black
blue
cyan
green
magenta
orange
pink
purple
red
white
yellow
"
`;

exports[`build action > build 5 1`] = `
"
# cspell-tools: keep-case no-split

apple
banana
grape
mango
orange
pear
strawberry
"
`;

exports[`build action > build 6 1`] = `
"
# cspell-tools: keep-case no-split

apple
banana
black
blue
cyan
grape
green
magenta
orange
pink
purple
red
white
yellow
"
`;

exports[`build action > build multi 0 1`] = `
"
# cspell-tools: keep-case no-split

black
blue
cyan
green
magenta
orange
pink
purple
red
white
yellow
"
`;

exports[`build action > build multi 0 2`] = `
"
# cspell-tools: keep-case no-split

!Codemsg
!Errorerror
!codecode
!err
*msg
+code*
+error*
Café
Code*
Error*
"
`;

exports[`build action > build multi 0 3`] = `
"
# cspell-tools: keep-case no-split

London
Los Angeles
Mexico City
New Amsterdam
New Delhi
New York
Paris
San Francisco
"
`;

exports[`build action > build multi 0 4`] = `
"00000000  54 72 69 65  42 6c 6f 62  01 02 03 04  30 30 2e 30   TrieBlob....00.0
00000010  31 2e 30 30  84 00 00 00  f0 01 00 00  00 00 00 00   1.00............
00000020  00 00 00 00  21 21 7e 7e  2b 2b 3a 3a  00 00 00 00   ....!!~~++::....
00000030  00 00 00 00  00 00 00 00  00 00 00 00  00 00 00 00   ................
00000040  00 00 00 00  00 00 00 00  00 00 00 00  00 00 00 00   ................
00000050  00 00 00 00  00 00 00 00  00 00 00 00  00 00 00 00   ................
00000060  00 00 00 00  00 00 00 00  00 00 00 00  00 00 00 00   ................
00000070  00 00 00 00  00 00 00 00  00 00 00 00  00 00 00 00   ................
00000080  00 00 00 00  05 00 00 00  4c 20 00 00  4d 34 00 00   ........L ..M4..
00000090  4e 5c 00 00  50 62 00 00  53 7a 00 00  00 01 00 00   N\\..Pb..Sz......
000000a0  01 00 00 00  6e 06 00 00  01 00 00 00  6f 07 00 00   ....n.......o...
000000b0  01 00 00 00  64 09 00 00  01 00 00 00  73 06 00 00   ....d.......s...
000000c0  01 00 00 00  65 0d 00 00  01 00 00 00  6c 0f 00 00   ....e.......l...
000000d0  01 00 00 00  65 11 00 00  01 00 00 00  67 13 00 00   ....e.......g...
000000e0  01 00 00 00  6e 15 00 00  01 00 00 00  41 17 00 00   ....n.......A...
000000f0  01 00 00 00  20 19 00 00  02 00 00 00  6e 0b 00 00   .... .......n...
00000100  73 1b 00 00  01 00 00 00  6f 1d 00 00  01 00 00 00   s.......o.......
00000110  79 06 00 00  01 00 00 00  74 22 00 00  01 00 00 00   y.......t"......
00000120  69 24 00 00  01 00 00 00  43 26 00 00  01 00 00 00   i$......C&......
00000130  20 28 00 00  01 00 00 00  6f 2a 00 00  01 00 00 00    (......o*......
00000140  63 2c 00 00  01 00 00 00  69 2e 00 00  01 00 00 00   c,......i.......
00000150  78 30 00 00  01 00 00 00  65 32 00 00  01 00 00 00   x0......e2......
00000160  6d 06 00 00  01 00 00 00  61 36 00 00  01 00 00 00   m.......a6......
00000170  64 38 00 00  01 00 00 00  72 3a 00 00  01 00 00 00   d8......r:......
00000180  65 3c 00 00  01 00 00 00  74 3e 00 00  01 00 00 00   e<......t>......
00000190  73 40 00 00  01 00 00 00  6d 42 00 00  01 00 00 00   s@......mB......
000001a0  69 06 00 00  01 00 00 00  68 46 00 00  01 00 00 00   i.......hF......
000001b0  6c 48 00 00  01 00 00 00  65 4a 00 00  01 00 00 00   lH......eJ......
000001c0  6b 06 00 00  01 00 00 00  72 4e 00 00  01 00 00 00   k.......rN......
000001d0  6f 50 00 00  03 00 00 00  41 44 00 00  44 4c 00 00   oP......AD..DL..
000001e0  59 52 00 00  01 00 00 00  20 54 00 00  01 00 00 00   YR...... T......
000001f0  77 58 00 00  01 00 00 00  65 5a 00 00  01 00 00 00   wX......eZ......
00000200  69 0d 00 00  01 00 00 00  72 5e 00 00  01 00 00 00   i.......r^......
00000210  61 60 00 00  01 00 00 00  6f 06 00 00  01 00 00 00   a\`......o.......
00000220  63 64 00 00  01 00 00 00  73 66 00 00  01 00 00 00   cd......sf......
00000230  69 68 00 00  01 00 00 00  63 6a 00 00  01 00 00 00   ih......cj......
00000240  6e 6c 00 00  01 00 00 00  61 6e 00 00  01 00 00 00   nl......an......
00000250  72 70 00 00  01 00 00 00  46 72 00 00  01 00 00 00   rp......Fr......
00000260  20 74 00 00  01 00 00 00  6e 76 00 00  01 00 00 00    t......nv......
00000270  61 78 00 00                                          ax.."
`;

exports[`build action > build multi 1 1`] = `
"
# cspell-tools: keep-case no-split

black
blue
cyan
green
magenta
orange
pink
purple
red
white
yellow
"
`;
